<resources>
    <string name="app_name">BoatPoolingApp</string>
    <string name="title_activity_sign_up">Sign_up</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="toast_login_username">Please enter Email Id</string>
    <string name="toast_login_pass">Please enter password</string>
    <string name="toast_confirm_pass">Please enter password again</string>
    <string name="toast_equal_pass">Password don\'t match</string>

    <string name="toast_name">Please enter Full Name</string>
    <string name="toast_dob">Please enter Date of Birth</string>
    <string name="empty">Please enter the required field</string>

    <string name="toast_login_userpass">Please enter Email and Password</string>
    <string name="toast_login_success">Login Successfully</string>

    <string name="already_user">Already have Account? login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="passworderror">   Should contain at least one digit,one special char,upper case and minimun 8 length </string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_code">Please enter verification code</string>
    <string name="invalid_entered_code">Invalid Username / Verification Code</string>

    <string name="getting_address">Loading...</string>
    <string name="email_message">Please Check your email for reset code.</string>
    <string name="email_error">Email Id invalid</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="check_email">Checking Email Id...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

