<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignUp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearlayout"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:ems="10"

            android:hint="First Name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"

            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:ems="10"

            android:hint="Last Name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"

            android:backgroundTint="@android:color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/dob"
            android:drawablePadding="8dp"
            android:editable="true"
            android:ems="10"

            android:focusable="false"
            android:hint="Date of Birth"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"

            android:backgroundTint="@android:color/white"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="Gender"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"

            android:backgroundTint="@android:color/white"

            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"


            android:textColorHint="@color/white"

            />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"


            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"

            android:ems="10"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"

            />


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"

            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/password"

            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"

        android:layout_marginRight="25dp"
        android:background="@drawable/loginbutton"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="218dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oldUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_user"
        android:textColor="@color/white_greyish"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>